--- a/README.Rmd
+++ b/README.Rmd
@@ -20,16 +20,26 @@ library(dplyr)
 [![Travis-CI Build Status](https://travis-ci.org/mdsumner/spbabel.svg?branch=master)](https://travis-ci.org/mdsumner/spbabel)
 [![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/mdsumner/spbabel?branch=master&svg=true)](https://ci.appveyor.com/project/mdsumner/spbabel)
 
+
+# spbabel: a tidy view of Spatial
+
+Spbabel provides simple tools to flip between Spatial and tidy forms of data. This package is to assist in the development of tools for spatial data in R. There is limited use for users directly, though see examples below. 
+
 ## Installation
 
-Spbabel can be installed directly from github: 
+Install the package from CRAN: 
+
+```{r,eval=FALSE}
+install.packages("spbabel")
+```
+
+The development version can be installed directly from github: 
 
 ```{r,eval=FALSE}
 devtools::install_github("mdsumner/spbabel")
 ```
-# spbabel: a tidy view of Spatial
 
-Spbabel provides simple tools to flip between Spatial and tidy forms of data. This package is to assist in the development of tools for spatial data in R, it probably has limited use for users directly, though see examples below. 
+## Formal spatial data in R
 
 Spatial data in the `sp` package have a formal definition  (extending class `Spatial`) that is modelled on shapefiles, and close at least in spirit to the [Simple Features definition](https://github.com/edzer/sfr). See [What is Spatial in R?](https://github.com/mdsumner/spbabel/wiki/What-is-Spatial-in-R) for more details. 
 
@@ -42,7 +52,7 @@ The long-form version is similar to that implemented in:
 * sp's `as()` coercion for  `SpatialLinesDataFrame` to `SpatialPointsDataFrame`
 * rasters's `geom()`
 * ggplot2's `fortify()`
-* gris's normalized tables
+* gris' normalized tables
  
 # How does spbabel work
 
