maps side-story is quite important

--- a/vignettes/geometry-tables.Rmd
+++ b/vignettes/geometry-tables.Rmd
@@ -48,7 +48,7 @@ What else is missing?
 
 Illustrate by converting maps package to sp to ggplot2, and maps to ggplot2. 
 
-```{r}
+```{r,eval=FALSE}
 library(maps)
 x <- map(plot = FALSE, resolution = 0, fill = TRUE)
 map(x, fill = TRUE)
@@ -94,6 +94,52 @@ for (i in seq_along(x$names)) {
 allmap <- map(plot = FALSE)
 mp <- mapstidy(map(regions = "Australia", plot = FALSE))
 mp <- mapstidy(map(plot = FALSE))
+```
+
+The maps fill=FALSE output is the arcs (ala TopoJSON) between node vertices. 
+
+should be able to find cycles by linking seqs and vertices, to reconstruct polys: 
+
+```{r, eval=FALSE}
+library(maps)
+library(tibble)
+
+
+fcounty <- map("county", fill = TRUE, plot = FALSE)
+lcounty <- map("county", fill = FALSE, plot = FALSE)
+
+str(fcounty)
+str(lcounty)
+
+miss <- is.na(lcounty$x)
+seqs <- cumsum(miss)
+v <- tibble(x = lcounty$x, y = lcounty$y, group = seqs)[!miss, ]
+
+## non-unique instances of vertices
+## with ide of original arc sequence
+vi <- v %>% mutate(.vx0 = as.integer(factor(paste(x, y, sep = "_")))) 
+
+## unique vertices
+vu <- vi %>% dplyr::select(x, y, .vx0) %>% distinct()
+vi <- vi %>% dplyr::select(.vx0, group) 
+
+non_uniques <- vi[duplicated(vi$.vx0), ]
+polys <- list()
+for (jj in unique(non_uniques$.vx0)) {
+  groups <- subset(non_uniques, .vx0 == jj)$group
+   xx <- vi %>% dplyr::filter(group %in% groups) %>% inner_join(vu) 
+  plot(xx$x, xx$y)
+  lapply(split(xx, xx$group), function(x) lines(x$x, x$y, col = "red"))
+  scan("", 1)
+}
+
+
+library(ggplot2)
+ggplot(v) + aes(x = x, y = y, group = group, col = group ) + geom_line() + 
+  scale_color_continuous(guide = FALSE)
+
+distinct(v)
+
 ```
 Verify with analogous plots in maps, sp, base, and ggplot2- with object comparisons, and maybe digests of the coords ??
 
